[gd_scene load_steps=6 format=3 uid="uid://ltgxyc6tof1l"]

[ext_resource type="PackedScene" uid="uid://cvqslim0foc6j" path="res://Personajes/personajes.tscn" id="1_ab4iu"]
[ext_resource type="Script" path="res://Personajes/EnemigoCerdito/enemigo_cerdito.gd" id="2_hpgt1"]
[ext_resource type="Texture2D" uid="uid://qh4778c8molj" path="res://Assets_PixelAdventure/Enemies/AngryPig/angryPig.png" id="2_pkgng"]
[ext_resource type="PackedScene" uid="uid://dwbaj5cmn0ti1" path="res://Trampas/dmg_player.tscn" id="4_sw6n6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_32mld"]
size = Vector2(20, 25)

[node name="EnemigoCerdito" groups=["Enemigos"] instance=ExtResource("1_ab4iu")]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_hpgt1")

[node name="Sprite2D" parent="." index="0"]
texture = ExtResource("2_pkgng")
hframes = 9
vframes = 6

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_32mld")

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Idle"

[node name="Raycast" type="Node2D" parent="." index="3"]

[node name="RayCastSuelo" type="RayCast2D" parent="Raycast" index="0"]
target_position = Vector2(0, 20)
collision_mask = 4

[node name="RayCastMuro" type="RayCast2D" parent="Raycast" index="1"]
target_position = Vector2(-20, 0)
collision_mask = 4

[node name="RayTimer" type="Timer" parent="Raycast" index="2"]

[node name="raycastPlayerDetector" type="RayCast2D" parent="." index="4"]
target_position = Vector2(-50, 0)

[node name="dmgPlayer" parent="." index="5" instance=ExtResource("4_sw6n6")]

[connection signal="timeout" from="Raycast/RayTimer" to="." method="_on_ray_timer_timeout"]
[connection signal="heHechoDanio" from="dmgPlayer" to="." method="_on_dmg_player_he_hecho_danio"]

[editable path="dmgPlayer"]
